# llmcontext

./: .gitignore  CONFIGURATION_SCHEMA.md  EMBEDDING_INTEGRATION_SUMMARY.md  MODEL_PROVIDER_VALIDATION_SUMMARY.md  README.md  pyproject.toml  setup_dev.py  test_add_command.py  test_config.py  test_config_command.py  test_embedding_integration.py  test_enhanced_status_output.py  test_model_provider_validation.py  test_ollama.py  test_ollama_summary.py  test_summarize_wrapper.py  test_vector_search.py
all_chunks/: fastapi_hybrid_001_sub_01.md  fastapi_hybrid_003.md  fastapi_hybrid_006.md  react_hybrid_000_sub_00.md  react_hybrid_000_sub_01.md  react_hybrid_000_sub_02.md  react_hybrid_000_sub_03.md  react_hybrid_001.md
chroma_db/: chroma.sqlite3
chunks/: fastapi_hybrid_000_sub_00.md  fastapi_hybrid_000_sub_01.md  fastapi_hybrid_000_sub_02.md  fastapi_hybrid_000_sub_03.md  fastapi_hybrid_000_sub_04.md  fastapi_hybrid_001_sub_00.md  fastapi_hybrid_001_sub_01.md  fastapi_hybrid_002_sub_00.md  fastapi_hybrid_002_sub_01.md  fastapi_hybrid_005.md  pytest_hybrid_000.md
chunks/angular/: angular_hybrid_000.md
chunks/django/: django_hybrid_000_sub_00.md  django_hybrid_000_sub_01.md  django_hybrid_001.md
chunks/fastapi/: fastapi_hybrid_000_sub_00.md  fastapi_hybrid_000_sub_01.md  fastapi_hybrid_000_sub_02.md  fastapi_hybrid_000_sub_03.md  fastapi_hybrid_001_sub_00.md  fastapi_hybrid_002_sub_00.md  fastapi_hybrid_002_sub_01.md  fastapi_hybrid_004.md  fastapi_hybrid_007.md
docs/: README.md
llmcontext/: __init__.py  api.py  cli.py  config.py
raw_docs/: angular.md  django.md  fastapi.md  flask.md  pytest.md  react.md  tailwind.md
semantic_chunks/: pytest_chunk_000.md
sidecar/: app.py
test_chroma_db/: chroma.sqlite3
tests/: __init__.py  test_api.py  test_cli.py  test_typer_cli.py
(+55 files in other folders)
